--- a/Day1/index.html
+++ b/Day1/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>MY First Github Page</h1>
+    <table border="2px">
+            <form action="" method="post"></form>
+           <tr><td colspan="2"registeration form></td></tr>
+        <tr><td>Name</td><td><input type="text" name="t1" required></td></tr>
+        <tr><td>email id</td><td> <input type="email" name="" id="" required></td></tr>
+        <tr><td>password</td><td><input type="password" name="" id="" required></td></tr>
+        <tr><td>address</td><td><textarea rows="" cols="20" name="" id=""></textarea></td></tr>
+        <tr><td>branch</td>
+            <td>cse<input type="radio" name="r1" id="">
+            IT<input type="radio" name="r1" id="">
+             ds<input type="radio" name="r1" id="">
+            </td>
+        </tr>
+        <tr>
+<td><input type="submit" value="register"></td>
+        </tr>
+    </table>
 </body>
 </html>
