--- a/Day1/index.html
+++ b/Day1/index.html
@@ -22,7 +22,8 @@
             </td>
         </tr>
         <tr>
-<td><input type="submit" value="register"></td>
+   <td><input type="submit" value="register"></td>
+   <td><input type="reset" value="clear"></td>
         </tr>
     </table>
 </body>
